plugins
{
    id 'java'
    id 'maven-publish'
    id("com.gradleup.shadow") version "9.4.0"
}

group = 'com.nikolai'
version = '2.3.4'

repositories
{
    mavenCentral()

    maven {
        name = "spigotmc"
        url = uri("https://hub.spigotmc.org/nexus/content/repositories/snapshots")
    }
}

dependencies
{
    compileOnly 'org.spigotmc:spigot-api:26.1.2-R0.1-SNAPSHOT'
}

java
{
    toolchain
    {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

tasks.withType(JavaCompile)
{
    options.encoding = 'UTF-8'
}

shadowJar
{
    archiveFileName = "${rootProject.name}-${version}.jar"
    destinationDirectory.set(new File("OutPut"))
}

tasks.register('deployPlugin', Copy)
{
    dependsOn shadowJar

    from shadowJar.archiveFile

    into 'E:/Developing/Minecraft Servers/1.21.11/plugins'
}

build
{
    finalizedBy deployPlugin
}
